fixed a bug with nav on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -90,14 +90,16 @@ body {
   font-size: 1.1rem;
   text-decoration: none;
   transition: transform 0.2s ease;
+  text-align: left;
+  margin-left: 25px !important;
 }
 
 .nav-link-btn:hover {
-  transform: translateY(-2px) scale(1.03);
+  transform: scale(1.05);
 }
 
 .nav-link-btn:active {
-  transform: translateY(-3px) scale(1.10);
+  transform: scale(1.07);
 }
 
 /* Responsive styles for header with fade in/out */
